--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,8 @@
     "filepond-plugin-file-validate-type": "^1.2.6",
     "fs-extra": "10.0.0",
     "js-cookie": "^2.2.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "konva": "^8.3.10",
     "lodash": "^4.17.21",
     "nuxt": "^2.15.7",
